[gd_scene load_steps=7 format=3 uid="uid://d2wmcvraufn4w"]

[ext_resource type="Script" path="res://scenes/TrackInteractor.gd" id="1_bo0ou"]
[ext_resource type="PackedScene" uid="uid://cb6o6dimu8rfk" path="res://scripts/ui/PointingUI.tscn" id="2_wijwk"]
[ext_resource type="Script" path="res://scripts/core/CurveHandler.gd" id="3_rtrpj"]

[sub_resource type="PlaneMesh" id="PlaneMesh_ra8yj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5n12r"]
size = Vector3(10, 0.01, 10)

[sub_resource type="Curve3D" id="Curve3D_6maol"]

[node name="Main" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0319066)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0.406286, 2.64067, 0.0157089)
fov = 85.8268

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0.0966455, 1.29675, -3.06559)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.54471)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0469902, -2.00383)

[node name="TrackInteractor" type="Node3D" parent="."]
script = ExtResource("1_bo0ou")

[node name="UI" type="CanvasLayer" parent="."]

[node name="PointingUI" parent="UI" instance=ExtResource("2_wijwk")]

[node name="Ground" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_ra8yj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_5n12r")

[node name="CurveHandler" type="Node3D" parent="."]
script = ExtResource("3_rtrpj")

[node name="CurvePath" type="Path3D" parent="."]
curve = SubResource("Curve3D_6maol")
